force-app/main/default/objects/Pricing_Threshold_Settings__mdt/Pricing_Threshold_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Created new metadata for story SDT-26044</description>
    <label>Pricing Threshold Setting</label>
    <pluralLabel>Pricing Threshold Settings</pluralLabel>
</CustomObject>