force-app/main/default/objects/Pricing_Threshold_Settings__mdt/fields/FieldType__c.field-meta.xml
<CustomField>
    <fullName>FieldType__c</fullName>
    <description>Added a new field for Story SDT-26044</description>
    <label>FieldType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>