force-app/main/default/objects/Pricing_Threshold_Settings__mdt/fields/Maximum_Value__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Value__c</fullName>
    <description>Added a new field for Story SDT-26044</description>
    <label>Maximum Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>